--- a/index.html
+++ b/index.html
@@ -614,8 +614,8 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us</h3>
-                  <p>+91 744 11110 73</p>
+                  <h3>Call/WhatsApp</h3>
+                  <a href="https://wa.me/+917441111073" target="_blank">+91 744 11110 73</a>
                 </div>
               </div><!-- End Info Item -->
 
