--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>As a backend developer with expertise in Node.js, Express.js, Nest.js, MongoDB, Sequelize MySQL, TypeORM, Git, TypeScript, JavaScript ES6, and RestApi, I am passionate about building scalable, high-performance applications that meet the needs of modern businesses.
+        <p>I am a backend developer with expertise in Node.js, Express.js, Nest.js, MongoDB, Sequelize MySQL, TypeORM, Git, TypeScript, JavaScript ES6, and RestApi, I am passionate about building scalable, high-performance applications that meet the needs of modern businesses.
         </p>
       </div><!-- End Section Title -->
 
@@ -437,11 +437,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/mongoorm.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>1</h4>
                   <p>Elifinty: A Fintech Application</p>
-                  <a href="assets/img/portfolio/mongoorm.jpeg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></a>
                   <a href="https://www.elifinty.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -449,11 +449,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/seq.mic.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>2</h4>
                   <p>Wasalt Property Management</p>
-                  <a href="assets/img/portfolio/seq.mic.jpeg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></a>
                   <a href="https://wasalt.com/en/properties-for-sale-in-riyadh?gad_source=1&gclid=Cj0KCQjw-uK0BhC0ARIsANQtgGMOXj96ktVL24BVIX3WZUZl94MvtH9B-nhI6JOUrl402YFje7UgSNQaArldEALw_wcB" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -461,11 +461,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/mysql.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>3</h4>
                   <p>IIFL Backend</p>
-                  <a href="assets/img/portfolio/mysql.jpeg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"></a>
                   <a href="https://www.iifl.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -473,11 +473,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/mysql.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>4</h4>
                   <p>One Finance</p>
-                  <a href="assets/img/portfolio/mysql.jpeg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"></i></a>
                   <a href="https://1finance.co.in/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -485,11 +485,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/mysql.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>6</h4>
                   <p>Yudget Fuel Management</p>
-                  <a href="assets/img/portfolio/mysql.jpeg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></i></a>
                   <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -497,11 +497,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/mongoorm.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>7</h4>
                   <p>Start A Cake</p>
-                  <a href="assets/img/portfolio/mongoorm.jpeg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></i></a>
                   <a href="https://www.instagram.com/startacake/?hl=en" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -509,11 +509,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/mysql.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>8</h4>
                   <p>Brilliant Bills</p>
-                  <a href="assets/img/portfolio/mysql.jpeg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"></i></a>
                   <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -521,11 +521,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/mysql.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>9</h4>
                   <p>Proselectd and Proselctd Application</p>
-                  <a href="assets/img/portfolio/mysql.jpeg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"></i></a>
                   <a href="https://www.f6s.com/company/preselectdapp#about" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -533,11 +533,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/mongoorm.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>10</h4>
                   <p>Momento- Finacial Application</p>
-                  <a href="assets/img/portfolio/mongoorm.jpeg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></i></a>
                   <a href="https://www.memento.ch/" title="More Details" target="_blank" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
